--- a/templates/payroll.html
+++ b/templates/payroll.html
@@ -5,8 +5,12 @@
 <div class="">
   <div class="">
     <div>
-      <h1 class=""><strong>Welcome to the Payroll System.</strong></h1>
-      <p><a href="/home">Home page</a></p>
+      <h1 class=""><strong>Welcome to the Payroll.</strong></h1>
+      <p><a href="/system/payroll">Go to Payroll</a></p>
+      <p><a href="/system/dashboard">Go to Dashboard</a></p>
+      <p><a href="/system/employee-list">Go to Employee List</a></p>
+      <p><a href="/system/time-sheet">Go to Time Sheet</a></p>
+
 
     </div>
   </div>
