added aside and nav bar in base

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,28 +1,34 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
-</head>
-<body>
-  
-</body>
-</html>
-=======
+
 {{define "title"}}
 <title>{{.Title}}</title>
 {{end}}
 {{define "content"}}
-<div class="">
+<!-- <div class="">
   <div class="">
     <div>
-        <h1 class=""><strong>Welcome to the Payroll Dashboard System.</strong></h1>
+        <h1 class="bold">Dashboard</h1>
           <p><a href="/home">Home page</a></p>
 
       </div>
   </div>
-</div>
+</div> -->
+<main class="dash-container">
+  <div class="dash">
+    <h1>Dashboard</h1>
+  </div>
+  <div class="dash-wrapper">
+    <div class="">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+    <div>
+      <div></div>
+    </div>
+  </div>
+</main>
 {{end}}
->>>>>>> 1ffdf3b0ab2191c026efb65d0e5f90ee070a80ca
