--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{.Title}}</title>
   {{ template "style" . }}
   {{ template "title" . }}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet">
+  <link rel="stylesheet" href="/static/css/style.css">
 </head>
-{{ template "content" . }}
+
 <body>
+
+  <main class="container">
+    <aside class="aside-main primary-bg">
+      <div class="logo">
+        <p class="primary">logo</p>
+      </div>
+      <div class="aside-menu">
+        <span>Overview</span>
+        <ul>
+          <li>Dashboard</li>
+          <li>Employee List</li>
+          <li>Timesheet</li>
+          <li>Finance</li>
+        </ul>
+      </div>
+    </aside>
+    <section class="wrapper1">
+      <nav class="nav-main secondary-bg">
+        <div class="nav-user tertiary">
+          <p>Welcome, User</p>
+          <p>01 January, 2024</p>
+        </div>
+        <div class="nav-profile">
+          <p class="tertiary">John Doe</p>
+          <div class="profile">
+
+          </div>
+        </div>
+      </nav>
+      <section class="wrapper2">
+        {{ template "content" . }}
+      </section>
+    </section>
+  </main>
+
     {{ template "script" . }}
     
     {{ define "style" }}{{ end }}
