--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
@@ -10,7 +11,8 @@
   {{ template "title" . }}
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
@@ -26,21 +28,33 @@
         <ul>
           <li>Dashboard</li>
           <li>Employee List</li>
-          <li>Timesheet</li>
-          <li>Finance</li>
+          <li>Time Sheet</li>
+          <li>Payroll</li>
         </ul>
       </div>
     </aside>
     <section class="wrapper1">
       <nav class="nav-main secondary-bg">
         <div class="nav-user tertiary">
-          <p>Welcome, User</p>
+          <p>Welcome, John Doe</p>
           <p>01 January, 2024</p>
         </div>
         <div class="nav-profile">
-          <p class="tertiary">John Doe</p>
           <div class="profile">
 
+          </div>
+          <div class="modal">
+            <div class="modal-content">
+              <!-- <div class="menu-profile"></div>
+              <p>John Doe</p> -->
+              <div class="mini-menu">
+                <ul>
+                  <li>Edit Profile</li>
+                  <li>Settings </li>
+                  <li>Logout</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -50,10 +64,13 @@
     </section>
   </main>
 
-    {{ template "script" . }}
-    
-    {{ define "style" }}{{ end }}
-    
-    {{ define "script" }}{{ end }}
+  {{ template "script" . }}
+
+  {{ define "style" }}{{ end }}
+
+  {{ define "script" }}{{ end }}
+
+  <script src="/static/css/js/script.js"></script>
 </body>
+
 </html>
