--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <title>{{.Title}}</title>
 {{end}}
 {{define "content"}}
- <div class="">
+<!-- <div class="">
   <div class="">
     <div>
 
@@ -15,27 +15,26 @@
       <p><a href="/system/dashboard">Go to Dashboard</a></p>
       <p><a href="/system/employee-list">Go to Employee List</a></p>
       <p><a href="/system/time-sheet">Go to Time Sheet</a></p>
-       <p><a href="/system/logout" type="button">Logout</a></p>
-
+      <p><a href="/system/logout" type="button">Logout</a></p>
 
       </div>
   </div>
-</div> 
+</div> -->
 <main class="dash-container">
   <div class="dash">
     <h1>Dashboard</h1>
   </div>
   <div class="dash-wrapper">
-    <div class="">
+    <div class="dash-box1">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <div>
+    <div class="dash-box2">
       <div></div>
       <div></div>
     </div>
-    <div>
+    <div class="dash-box3">
       <div></div>
     </div>
   </div>
