update login and connect dashboards

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
       <div class="aside-menu">
         <span>Overview</span>
         <ul>
-          <li>Dashboard</li>
-          <li>Employee List</li>
-          <li>Time Sheet</li>
-          <li>Payroll</li>
+          <li><a href="/system/dashboard">Dashboard</a></li>
+          <li><a href="/system/employee-list">Employee List</a></li>
+          <li><a href="/system/time-sheet">Time Sheet</a></li>
+          <li><a href="/system/payroll">Payroll</a></li>
         </ul>
       </div>
     </aside>
@@ -51,7 +51,7 @@
                 <ul>
                   <li>Edit Profile</li>
                   <li>Settings </li>
-                  <li>Logout</li>
+                  <li><a href="/system/logout" type="button">Logout</a></li>
                 </ul>
               </div>
             </div>
