--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -2,7 +2,7 @@
 <title>{{.Title}}</title>
 {{end}}
 {{define "content"}}
-<div class="">
+<!-- <div class="">
   <div class="">
     <div>
       <h1 class=""><strong>Welcome to the Employee List.</strong></h1>
@@ -14,5 +14,26 @@
 
     </div>
   </div>
-</div>
+</div> -->
+
+<main class="dash-container">
+  <div class="dash">
+    <h1>Employee List</h1>
+  </div>
+  <div class="dash-wrapper">
+    <div class="dash-box1">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="dash-box2">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="dash-box3">
+      <div></div>
+    </div>
+  </div>
+</main>
+
 {{end}}
