--- a/templates/payroll.html
+++ b/templates/payroll.html
@@ -2,10 +2,10 @@
 <title>{{.Title}}</title>
 {{end}}
 {{define "content"}}
-<div class="">
+<!-- <div class="">
   <div class="">
     <div>
-      <h1 class=""><strong>Welcome to the Payroll.</strong></h1>
+      <h1 class=""><strong>Payroll.</strong></h1>
       <p><a href="/system/payroll">Go to Payroll</a></p>
       <p><a href="/system/dashboard">Go to Dashboard</a></p>
       <p><a href="/system/employee-list">Go to Employee List</a></p>
@@ -14,5 +14,25 @@
 
     </div>
   </div>
-</div>
+</div> -->
+
+<main class="dash-container">
+  <div class="dash">
+    <h1>Payroll</h1>
+  </div>
+  <div class="dash-wrapper">
+    <div class="dash-box1">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="dash-box2">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="dash-box3">
+      <div></div>
+    </div>
+  </div>
+</main>
 {{end}}
