--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,7 +76,12 @@
   cursor: pointer;
 }
 
-.aside-menu>ul>li:hover {
+.aside-menu>ul>li>a {
+  text-decoration: none;
+  color: white;
+}
+
+.aside-menu>ul>li>a:hover {
   color: #FFC5BF;
 }
 
@@ -159,11 +164,13 @@
   gap: 10px;
 }
 
-.mini-menu>ul>li {
+.mini-menu>ul>li>a, .mini-menu>ul>li:hover {
   cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
 
-.mini-menu>ul>li:hover {
+.mini-menu>ul>li>a:hover, .mini-menu>ul>li:hover {
   color: #E40813;
 }
 
@@ -235,6 +242,66 @@
 }
 
 /* DASHBOARD */
+
+/* LOGIN */
+
+.login-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-wrapper {
+  width: 20rem;
+  height: 20rem;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.login-logo {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.login-form {
+  padding: 2rem;
+}
+
+.login-box {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 10px;
+}
+
+.login-box > p {
+  color: white;
+  font-size: 15px;
+  display: block;
+}
+
+.login-box > input {
+  border-radius: 10px;
+  height: 50px;
+  padding: 5px;
+}
+
+.login-box > button {
+  border-radius: 10px;
+  height: 50px;
+  background-color: #FF7062;
+  cursor: pointer;
+}
+
+/* LOGIN */
 
 /* EMPLOYEE LIST */
 
