--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   <main class="container">
     <aside class="aside-main primary-bg">
       <div class="logo">
-        <p class="primary">logo</p>
+        <img src="/static/assets/img/integritynet-logo.png">
       </div>
       <div class="aside-menu">
         <span>Overview</span>
