--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -16,22 +16,65 @@
   </div>
 </div> -->
 
-<main class="dash-container">
-  <div class="dash">
+<main class="emplist-container">
+  <div class="emplist">
     <h1>Employee List</h1>
+    <input>
   </div>
-  <div class="dash-wrapper">
-    <div class="dash-box1">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="dash-box2">
-      <div></div>
-      <div></div>
-    </div>
-    <div class="dash-box3">
-      <div></div>
+  <div class="emplist-wrapper">
+    <div class="emplist-box1">
+      <table class="emplist-table">
+        <tr class="table-head">
+          <th>ID</th>
+          <th>Employee Name</th>
+          <th>Department</th>
+          <th>Position</th>
+          <th>Contact</th>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Department of Energy</td>
+          <td>Manager</td>
+          <td>1234567899</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Department of Energy</td>
+          <td>Manager</td>
+          <td>1234567899</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Department of Energy</td>
+          <td>Manager</td>
+          <td>1234567899</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Department of Energy</td>
+          <td>Manager</td>
+          <td>1234567899</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Department of Energy</td>
+          <td>Manager</td>
+          <td>1234567899</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Department of Energy</td>
+          <td>Manager</td>
+          <td>1234567899</td>
+        </tr>
+        
+      </table>
     </div>
   </div>
 </main>
