--- a/templates/payroll.html
+++ b/templates/payroll.html
@@ -16,21 +16,22 @@
   </div>
 </div> -->
 
-<main class="dash-container">
-  <div class="dash">
+<main class="pr-container">
+  <div class="pr">
     <h1>Payroll</h1>
+    <input>
   </div>
-  <div class="dash-wrapper">
-    <div class="dash-box1">
+  <div class="pr-wrapper">
+    <div class="pr-box1">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <div class="dash-box2">
+    <div class="pr-box2">
       <div></div>
       <div></div>
     </div>
-    <div class="dash-box3">
+    <div class="pr-box3">
       <div></div>
     </div>
   </div>
