--- a/templates/time-sheet.html
+++ b/templates/time-sheet.html
@@ -17,21 +17,22 @@
   </div>
 </div> -->
 
-<main class="dash-container">
-  <div class="dash">
+<main class="ts-container">
+  <div class="ts">
     <h1>Time Sheet</h1>
+    <input>
   </div>
-  <div class="dash-wrapper">
-    <div class="dash-box1">
+  <div class="ts-wrapper">
+    <div class="ts-box1">
       <div></div>
       <div></div>
       <div></div>
     </div>
-    <div class="dash-box2">
+    <div class="ts-box2">
       <div></div>
       <div></div>
     </div>
-    <div class="dash-box3">
+    <div class="ts-box3">
       <div></div>
     </div>
   </div>
