--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/static/css/style.css">
+  <script src="https://kit.fontawesome.com/2fcd02beee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,12 +25,12 @@
         <img src="/static/assets/img/integritynet-logo.png">
       </div>
       <div class="aside-menu">
-        <span>Overview</span>
+        <!-- <span>Overview</span> -->
         <ul>
-          <li><a href="/dashboard">Dashboard</a></li>
-          <li><a href="/employee-list">Employee List</a></li>
-          <li><a href="/time-sheet">Time Sheet</a></li>
-          <li><a href="/payroll">Payroll</a></li>
+          <li><i class="fa-brands fa-slack icon"></i><a href="/dashboard">Dashboard</a></li>
+          <li><i class="fa-solid fa-user-tie icon"></i></i><a href="/employee-list">Employee List</a></li>
+          <li><i class="fa-regular fa-stopwatch icon"></i><a href="/time-sheet">Time Sheet</a></li>
+          <li><i class="fa-solid fa-file-invoice-dollar icon"></i><a href="/payroll">Payroll</a></li>
         </ul>
       </div>
     </aside>
@@ -41,7 +42,7 @@
         </div>
         <div class="nav-profile">
           <div class="profile">
-
+            <img src="/static/assets/img/no-profile.png">
           </div>
           <div class="modal">
             <div class="modal-content">
