--- a/templates/time-sheet.html
+++ b/templates/time-sheet.html
@@ -24,16 +24,124 @@
   </div>
   <div class="ts-wrapper">
     <div class="ts-box1">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="ts-box2">
-      <div></div>
-      <div></div>
-    </div>
-    <div class="ts-box3">
-      <div></div>
+      <table class="ts-table">
+        <tr class="table-head">
+          <th>ID</th>
+          <th>Employee Name</th>
+          <th>Time In</th>
+          <th>Time Out</th>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>9:00</td>
+          <td>18:00</td>
+        </tr>
+        
+  
+      </table>
     </div>
   </div>
 </main>
